--- a/TODO.org
+++ b/TODO.org
@@ -1,6 +1,6 @@
 
 * Todo [0/4]:
- - [ ] Add a commandline that allows you to assemble the mech
+ - [ ] Add a commandline that allows you to assemble the spaceship
  - [ ] Allow networks of cabling, with tree structure, rather than point to point
  - [ ] Respect bandwidth limitations of cables etc
  - [ ] Enforce that cabling can't be connected while physical attachment is active
@@ -13,7 +13,6 @@
    - [ ] Must disconnect the diagnostic computer from the mech before moving it
  - [ ] Add damage per component.
  - [ ] Attachments that exceed weight tolerance become damaged or unuseable
- - [ ] Be able to repair physical components (this may be long term)
- - [ ] Need a concept of "free-standing" vs. supported when
-   determining if an attachment is under weight tolerances
+ - [ ] Be able to repair physical components
  - [ ] ensure that broadcasts over a bus aren't duplicated by determining the connected components
+ - [ ] Add shielding and armor to cables and other pieces. EMP disrupts unshielded cable
